@@ -1,3 +1,7 @@
+2008-07-31  Arno Rehn  <arno@arnorehn.de>
+
+	* Assign a new KApplication instance to the qApp global variable.
+
 2008-07-07  Arno Rehn  <arno@arnorehn.de>
 
 	* KimonoPluginFactory: If a class isn't found in the assembly, look
